--- a/pres.tex
+++ b/pres.tex
@@ -241,4 +241,15 @@ Example:
 \end{itemize}
 \end{frame}
 
+\section{Statistics}
+\begin{frame}
+Friendly neighbourhood Statistics
+\begin{itemize}
+  \item Approx. 2500 tasks added/completed per day (266000 total)
+  \item An average task requires 2.40 resources (with stddev. of 1.00)
+  \item Average run time of a task is 22 minutes
+  \item Average time in the queue of a task is 22 minutes (prioritized: 8 seconds, matchbox: 12 minutes, others: 33 minutes)
+  \item 32.6 \% of all reservations are C20, 10.8 \% are E20 (94 C20s, 37 E20s in the pool)
+\end{itemize}
+\end{frame}
 \end{document}
