Add statistics slide.

--- a/pres.tex
+++ b/pres.tex
@@ -246,9 +246,13 @@ Example:
 Friendly neighbourhood Statistics
 \begin{itemize}
   \item Approx. 2500 tasks added/completed per day (266000 total)
-  \item An average task requires 2.40 resources (with stddev. of 1.00)
-  \item Average run time of a task is 22 minutes
-  \item Average time in the queue of a task is 22 minutes (prioritized: 8 seconds, matchbox: 12 minutes, others: 33 minutes)
+  \item An avg. task requires 2.40 resources (with stddev. of 1.00)
+  \item Avg. run time is 22 minutes
+  \item Avg. time in queue is 74 minutes (stddev 4.5 hours)
+    \begin{itemize}
+      \item Matchbox: 46 minutes (stddev 2.5 hours)
+      \item Others: 1 hour 46 minutes (stddev 5.8 hours))
+    \end{itemize}
   \item 32.6 \% of all reservations are C20, 10.8 \% are E20 (94 C20s, 37 E20s in the pool)
 \end{itemize}
 \end{frame}
