--- a/pres.tex
+++ b/pres.tex
@@ -16,10 +16,11 @@
   
   % Title and subtitle
   \begin{beamercolorbox}[center,#1]{title}
+    \vskip0.04em%
     \usebeamerfont{title}\inserttitle\par%
     \ifx\insertsubtitle\@empty%
     \else%
-      \vskip0.25em%
+      \vskip0.3em%
       {\usebeamerfont*{subtitle}\usebeamercolor*[fg]{subtitle}\insertsubtitle\par}%
     \fi%
   \end{beamercolorbox}%
@@ -63,8 +64,8 @@
 %  \usebeamercolor[fg]{titlegraphic}\inserttitlegraphic
 }
 
-\title{Deferreds}
-\subtitle{Strategy for Resource Reservation in the ITVM}
+\title{Strategy for Resource Reservation in the ITVM}
+\subtitle{}
 \author{David Buchmann}
 \institute{Cisco Systems}
 
@@ -184,7 +185,7 @@ Same strategy, queue sorted by
 \begin{itemize}
   \item Priority (higher integer before lower)
   \item Is matchbox (true before false)
-  \item Add time ascending (older before younger)
+  \item Added time ascending (older before younger)
 \end{itemize}
 \column{0.5in}
 \includegraphics[scale=0.50]{sort.png}
